--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-twitter_data.db
-archive\
-archive\notebooks\
+C:\Users\kushl\OneDrive\Documents\Learning\Mentorship\twitter_marketing_ML\archive
+C:\Users\kushl\OneDrive\Documents\Learning\Mentorship\twitter_marketing_ML\archive\notebooks\
