Cleaning notebooks folder. Modified gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-C:\Users\kushl\OneDrive\Documents\Learning\Mentorship\twitter_marketing_ML\archive
-C:\Users\kushl\OneDrive\Documents\Learning\Mentorship\twitter_marketing_ML\archive\notebooks\
+Twitter_NLP_Influencer_Detection.ipynb
