Added.gitattributes file to ignore large files in git Added pickle files and dataframes to gitignore and data folder Modified notebooks to use pickle files and dataframes and show cell outputs Updated README.md Added requirements.txt

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 twitter_data.db filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+data/*.pkl filter=lfs diff=lfs merge=lfs -text
+model/localBERT filter=lfs diff=lfs merge=lfs -text
+data/tweets_df.pkl filter=lfs diff=lfs merge=lfs -text
+model/twitter_bert_model filter=lfs diff=lfs merge=lfs -text
+data/df_tweets_preprocessed.pkl filter=lfs diff=lfs merge=lfs -text
